Issue #20374: Avoid compiler warnings when compiling readline with libedit.